# HIPAA-Training-System-for-Pharmacy-Staff-V3.0

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_project.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cli/: __init__.py  cli.py
content/: checklist_items.json  lessons.json  quiz_questions.json
core/: __init__.py  audit.py  config.py  content.py  progress.py  scoring.py
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  PYTHONANYWHERE_TEST.md  QUICK_START.md  SETUP_GUIDE.md  TESTING.md
docs/docs/: TROUBLESHOOTING.md
hipaa_training/: __init__.py  cli.py  compliance_dashboard.py  content_manager.py  models.py  security.py  training_engine.py
scripts/: backup_database.sh  check_environment.py  conftest.py  deploy_pythonanywhere.sh  health_check.py  manual_test.py  run_all_tests.sh  setup_production.sh  test_scenarios.py
tests/: conftest.py  test_cli_security.py  test_compliance_dashboard.py  test_content_manager.py  test_integration.py  test_security_comprehensive.py  test_security_manager.py  test_training_engine.py  test_user_manager.py
