[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hipaa_training"
version = "3.0.0"
description = "HIPAA Training System for Pharmacy Staff (V3.0)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Israa Ali", email = "israaali2019@yahoo.com" }
]
dependencies = [
    "cryptography>=3.4.8",
    "sqlalchemy>=1.4.23",
    "alembic>=1.7.1",
    "python-dotenv>=0.19.0",
    "python-dateutil>=2.8.2",
    "psycopg2-binary>=2.9.3",
    "colorama>=0.4.4",
    "rich>=12.5.1",
    "speechrecognition>=3.8.1",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/Saranoah/HIPAA-Training-System-for-Pharmacy-Staff-V3.0"
Issues = "https://github.com/Saranoah/HIPAA-Training-System-for-Pharmacy-Staff-V3.0/issues"
Documentation = "https://github.com/Saranoah/HIPAA-Training-System-for-Pharmacy-Staff-V3.0#readme"
